#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Version 2.1 (2025-04-22)

- =corfu-history-duplicate= and =corfu-history-decay=: New customization options to
  adjust the rank of duplicate history elements, such that they appear earlier
  in the completion list.
- =corfu-history-mode=: Add =corfu-history= to =savehist-minibuffer-history-variables=
  in order to save the history if =savehist-mode= is enabled.

* Version 2.0 (2025-03-28)

- ~corfu-quick~: Ensure that popup does not move.

* Version 1.7 (2025-01-28)

- Bugfixes only.

* Version 1.6 (2024-12-22)

- Require Emacs 28.1.
- Use fringe to display scroll bar. This change improves performance and makes
  sure that the scroll bar cannot be pushed outside the child frame by the
  content. This affects for example ~cape-emoji~.
- Improve suffix alignment.
- Remember popup width during completion to avoid width fluctuations. Basically
  the popup is only allowed to grow.
- ~corfu-insert-separator~: Jump back to prompt if a candidate is previewed.

* Version 1.5 (2024-07-26)

- New customization variable =global-corfu-minibuffer= to enable Corfu in the
  minibuffer.
- Unbind =C-a= in =corfu-map=. This binding is only needed in modes which override
  =C-a= instead of remapping ~move-beginning-of-line~.
- Unbind =<tab>= in ~corfu-map~. This binding is only needed in modes which bind
  =<tab>= instead of =TAB=, as was the case in old versions of Org. If you use such
  a mode, please report this as a bug for this mode. In the meantime you can use
  =(keymap-set corfu-map "<tab>" #'corfu-complete)=.
- Add new command ~corfu-send~ as alternative to ~corfu-insert~.
- =corfu-popupinfo=: Support both =face= and =font-lock-face= highlighting.
- Bump Compat dependency to Compat 30.

* Version 1.4 (2024-05-23)

- ~corfu-auto-commands~: Add ~delete-backward-char~.

* Version 1.3 (2024-04-05)

- Preserve currently selected candidate on further input. This matters if