@@ -2,6 +2,11 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Development
+
+- Guard Corfu hooks to automatically print stack traces in order to ease
+  debugging.
+
 * Version 2.1 (2025-04-22)
 
 - =corfu-history-duplicate= and =corfu-history-decay=: New customization options to
